[tool.poetry]
name = "appiledphysics"
version = "0.1.0"
description = ""
authors = ["lockdef <locktki@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
